jwt_auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jwt-backend-service
spec:
  selector:
    app: jwt-backend-app
  ports:
    - protocol: TCP
      port: 3000       # Port that the service will expose
      targetPort: 3000  # Port that the container is listening on
  
---

apiVersion: v1
kind: Service
metadata:
  name: jwt-frontend-service
spec:
  selector:
    app: jwt-frontend-app
  ports:
    - protocol: TCP
      port: 4173       # Port that the service will expose
      targetPort: 4173  # Port that the container is listening on
