jwt_auth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
spec:
  ingressClassName: nginx
  rules:
    - host: jwt.test
      http:
        paths:
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: jwt-backend-service
                port:
                  number: 3000
          - path: /frontend
            pathType: Prefix
            backend:
              service:
                name: jwt-frontend-service
                port:
                  number: 4173
